Fixed labels taking space when invisible aswell as other small fixes on styling and layout!

--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,9 @@ body {
 }
 
 /* INDEX LOGINFORM STYLING */
-
+label {
+    display: inline;
+}
 .ck-editor__editable {
     min-height: 170px;
     resize: vertical;
